force-app/main/default/objects/aig_AI_Compliance_Checklist_Question__c/aig_AI_Compliance_Checklist_Question__c.object-meta.xml
<CustomObject>
    <label>AI Compliance Checklist Question</label>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>AI Compliance Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Compliance Checklist Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>