force-app/main/default/objects/aig_AI_Compliance_Checklist_Question__c/fields/aig_Active__c.field-meta.xml
<CustomField>
    <fullName>aig_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>