force-app/main/default/objects/aig_AI_Compliance_Checklist_Question__c/fields/aig_AI_Compliance_Checklist__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Compliance_Checklist__c</fullName>
    <label>AI Compliance Checklist</label>
    <referenceTo>aig_AI_Compliance_Checklist__c</referenceTo>
    <relationshipLabel>AI Compliance Checklist Questions</relationshipLabel>
    <relationshipName>aig_AI_Compliance_Checklist_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>