force-app/main/default/objects/aig_AI_Compliance_Checklist_Question__c/fields/aig_Default_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>aig_Default_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Decision Maker</label>
    <referenceTo>aig_AI_Stakeholder__c</referenceTo>
    <relationshipLabel>AI Compliance Checklist Questions</relationshipLabel>
    <relationshipName>AI_Compliance_Checklist_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>