force-app/main/default/objects/aig_AI_Compliance_Checklist_Question__c/fields/aig_Question__c.field-meta.xml
<CustomField>
    <fullName>aig_Question__c</fullName>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>