force-app/main/default/objects/aig_AI_Compliance_Checklist_Question__c/fields/aig_Response_Type__c.field-meta.xml
<CustomField>
    <fullName>aig_Response_Type__c</fullName>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Multiple Choice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>